--- a/cacapalindromo/src/main/resources/application.properties
+++ b/cacapalindromo/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+server.port = 8081
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:teste
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+;NON_KEYWORDS=OFFSET
+
